# fx-trading-system

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
docker/minio/: Dockerfile
docker/postgresql/: init.sql  postgresql.conf
docker/redis/: redis.conf
docs/: index.md
docs/architecture/: database-design.md  system-architecture.md
docs/development/: setup.md
docs/learning/: day1.md  day2.md  phase1-summary.md
scripts/database/: backup.sh  migrate.sh  restore.sh  seed.sh
scripts/dev/: check-env.sh  reset-db.sh  run-tests.sh  setup-dev.sh
