# pyproject.toml - Python项目配置文件
# 这是现代Python项目的标准配置文件，用于管理依赖、构建配置和工具设置
# 采用TOML格式，易于阅读和编写

# ============================================================================
# Poetry项目管理配置部分
# ============================================================================
[tool.poetry]
# 项目名称，遵循PEP 508规范，用于包索引和依赖管理
name = "fx-trading-system-backend"

# 项目版本，遵循语义化版本规范 (Major.Minor.Patch)
version = "0.1.0"

# 项目描述，简要说明项目功能
description = "Backend for the FX Trading Order Management System"

# 作者列表，每个作者按"姓名 <邮箱>"格式
authors = ["Your Name <you@example.com>"]

# 项目README文件路径，用于文档显示
readme = "README.md"

# 指定包含的包目录，可以指定多个包或模块
packages = [{include = "backend"}]
# include参数指定包含的目录，每个对象定义包的包含规则
# 可以使用exclude参数排除特定文件

# ============================================================================
# 项目依赖配置部分
# ============================================================================
[tool.poetry.dependencies]
# Python版本约束，^符号表示兼容版本
# ^3.11 表示 >=3.11.0 且 <4.0.0
python = "^3.11"

# 主要依赖将在后续阶段逐步添加，这里先预留结构
# 依赖行以#开头表示注释，不会被安装
# Django = "^4.2"                     # Django Web框架
# djangorestframework = "^3.14"       # Django REST框架
# psycopg2-binary = "^2.9"            # PostgreSQL数据库适配器
# redis = "^4.5"                      # Redis客户端
# celery = "^5.3"                     # 分布式任务队列
# django-cors-headers = "^4.0"        # 处理CORS跨域请求
# django-storages = "^1.13"           # 云存储后端支持
# pandas = "^2.0"                     # 数据处理库
# python-jose = "^3.3"                # JWT令牌实现
# pyjwt = "^2.8"                      # JWT编码解码库

# ============================================================================
# 开发依赖组配置
# ============================================================================
[tool.poetry.group.dev.dependencies]
# dev依赖组，仅用于开发环境，生产环境不安装
# black: 代码格式化工具，强制执行一致的代码风格
black = "^23.0"

# flake8: 代码风格检查工具，检查PEP8规范
flake8 = "^6.0"

# isort: 自动整理import语句的工具
isort = "^5.12"

# pytest: 强大的测试框架
pytest = "^7.4"

# pytest-django: 为Django项目提供pytest支持
pytest-django = "^4.5"

# ipython: 增强的Python交互式解释器
ipython = "^8.14"

# pre-commit: Git预提交钩子框架，在提交前运行检查
pre-commit = "^3.3"

# ============================================================================
# 构建系统配置部分
# ============================================================================
[build-system]
# 定义构建系统所需的最小依赖
# requires字段指定构建项目所需的最小依赖集合
requires = ["poetry-core"]

# 构建后端实现，指定使用哪个后端来构建项目
# poetry.core.masonry.api是Poetry的构建API
build-backend = "poetry.core.masonry.api"

# ============================================================================
# Django框架相关配置 (可选，用于提示)
# ============================================================================
[tool.django]
# Django项目名称，用于工具识别项目结构
project_name = "backend"

# Django设置模块路径，指定开发环境设置文件位置
# 这个配置可以被支持的工具读取，用于自动检测Django项目配置
settings_module = "config.settings.development"

# ============================================================================
# 注意事项：
# 1. 运行 poetry install 会自动创建虚拟环境并安装依赖
# 2. 运行 poetry lock 会生成/更新poetry.lock文件锁定依赖版本
# 3. 所有依赖更改后都应该运行 poetry update 更新锁文件
# 4. 使用 poetry add <package> 添加新依赖会自动更新此文件
# 5. 使用 poetry run <command> 在虚拟环境中运行命令
# 6. 使用 poetry shell 激活虚拟环境
# ============================================================================